re-tried final assignment to get more points

--- a/Required_Final_Assignment_9.1_Part1-GitHub_and_Advanced_Python_Functions.ipynb
+++ b/Required_Final_Assignment_9.1_Part1-GitHub_and_Advanced_Python_Functions.ipynb
@@ -16,7 +16,6 @@
    },
    "source": [
     "# Required Final Assignment 9.1 (Part 1): GitHub and Advanced Python Functions\n",
-    "## Kevin Carlson\n",
     "---\n",
     "In this module, you learned about some more advanced Python concepts such as Python classes, functions with a variable number of positional arguments, decorators, and wrappers. In the final assignment for this module, you will be tested on your knowledge about these topics. Part 2 of the final assignment will require you to download your assignment submission from Codio and upload it to your GitHub repository.\n",
     "\n",
@@ -371,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -449,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -524,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -546,10 +545,14 @@
     "\n",
     "# YOUR CODE HERE\n",
     "def my_average(*args):\n",
-    "    return sum(args) / len(args)\n",
+    "    result = 0\n",
+    "    for x in args:\n",
+    "        result += x\n",
+    "    result = result/len(args)\n",
+    "    return result\n",
     "\n",
-    "ans7a = my_average(78, 82, 91, 66)\n",
-    "ans7b = my_average(56, 89, 76, 100)"
+    "ans7a = my_average(78,82,91,66)\n",
+    "ans7b = my_average(56,89,76,100)"
    ]
   },
   {
@@ -607,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -632,7 +635,7 @@
     "def print_last_info(**kwargs):\n",
     "    items = list(kwargs.items())\n",
     "    key_n, value_n = items[-1]\n",
-    "    return f\"{key_n} is {value_n}.\"\n",
+    "    return f\"{key_n} is {value_n}\"\n",
     "\n",
     "person1 = {\"Name\": \"Rosie\", \"Age\": 33, \"Profession\": \"Data Scientist\"}\n",
     "person2 = {\"Name\": \"Kyle\", \"Age\": 28, \"Profession\": \"Data Engineer\", \"phone number\": 4659874982}\n",
@@ -696,7 +699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -719,7 +722,6 @@
     "\n",
     "\n",
     "# YOUR CODE HERE\n",
-    "\n",
     "movie = {\n",
     "    \"Title\": \"Inception\",\n",
     "    \"Director\": \"Nolan\",\n",
@@ -787,7 +789,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 11,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -860,7 +862,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 12,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -953,7 +955,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 13,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1050,7 +1052,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 14,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1083,7 +1085,7 @@
     "def decorator_passing_arbitrary_arguments(func):\n",
     "    def wrapper_accepting_arbitrary_arguments(*args):\n",
     "        print(\"The positional arguments are\", args)\n",
-    "        return func(*args)\n",
+    "        func(*args)\n",
     "    return wrapper_accepting_arbitrary_arguments\n",
     "\n",
     "@decorator_passing_arbitrary_arguments\n",
@@ -1109,13 +1111,6 @@
      "solution": false
     }
    },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
    "outputs": [],
    "source": []
   },
